+++ version 2.0
* chat: #2669 implemented: store content of input box in chat widgets (Vogel)
* mediaplayer: #943 fixed: disable mediaplayer statuses after changing it manually (Vogel)

+++ version 1.0-rc8
* themes: #2844 fixed: more formats of archives supported (Vogel)
* gui: #2845 fixed: change Help link into Forum link (Vogel)

+++ version 1.0-rc7
* gui: #2839 fixed: properly set chat window title when no tabs plugin is loaded (Vogel)
* jabber: #2842 fixed: vcard support problems resolved (Vogel)
* jabber: #2843 fixed: avatar handling issues resolved (Vogel)

+++ version 1.0-rc6
* gui: #2836 fixed: do not allow to shrink notification configuration widget too much (Vogel)
* windows: #2837 fixed: invalid fonts on windows after opening chat window (Vogel)
* chat: #2840 fixed: 'Enter sends' message action was not properly updating (Vogel)

+++ version 1.0-rc5
* otr: #2835 fixed: chat button was displayed inproperly on Windows (Vogel)
* windows: add more external plugins to installer (Vogel)

+++ version 1.0-rc4
* plugins: #2831 fixed: remove code from plugins object constructors and destructors (Vogel)
* gui: #2832 fixed: improved behavior of new open chat with window (Vogel)
* gui: #2833 fixed: dpi in user list (beevvy)
* gui: #2823 fixed: show scrollbar in plugins widget on Windows (Vogel)

+++ version 1.0-rc3
* windows: fixed windows build (Vogel)
* jabber: #2800 fixed: unable to change buddy name with Facebook account to its real name (Vogel)

+++ version 1.0-rc3
* windows: build fixes (Vogel)
* debian: build fixes (Vogel)

+++ version 1.0-rc2
* misc: misc fixes (Vogel)

+++ version 1.0-rc1
* gadu: #2750 fixed: unable to login when password contains non-ascii characters (Vogel)
* status: #2655 fixed: set status on new account automatically if status is per-identity or per-all (Vogel)
* jabber: #2680 fixed: IPv6 was broken (beevvy)
* icons: Faenza theme added (fademind)

+++ version 1.0-alpha5
* gui: #2614 fixed: problems with displaying unread messages (Vogel)
