@@ -29,6 +29,7 @@
 class Account;
 class Contact;
 class OtrContextConverter;
+class OtrPathService;
 class OtrUserStateService;
 
 class OtrFingerprintService : public QObject
@@ -36,9 +37,8 @@ class OtrFingerprintService : public QObject
 	Q_OBJECT
 
 	QPointer<OtrContextConverter> ContextConverter;
+	QPointer<OtrPathService> PathService;
 	QPointer<OtrUserStateService> UserStateService;
-
-	QString fingerprintsStoreFileName() const;
 
 public:
 	static void wrapperOtrWriteFingerprints(void *data);
@@ -53,6 +53,7 @@ public:
 	virtual ~OtrFingerprintService();
 
 	void setContextConverter(OtrContextConverter *contextConverter);
+	void setPathService(OtrPathService *pathService);
 	void setUserStateService(OtrUserStateService *userStateService);
 
 	void readFingerprints() const;
