@@ -22,6 +22,7 @@
 #include "misc/paths-provider.h"
 
 #include "otr-op-data.h"
+#include "otr-path-service.h"
 #include "otr-user-state-service.h"
 
 #include "otr-instance-tag-service.h"
@@ -45,6 +46,11 @@ OtrInstanceTagService::~OtrInstanceTagService()
 {
 }
 
+void OtrInstanceTagService::setPathService(OtrPathService *pathService)
+{
+	PathService = pathService;
+}
+
 void OtrInstanceTagService::setUserStateService(OtrUserStateService *userStateService)
 {
 	UserStateService = userStateService;
@@ -55,7 +61,7 @@ void OtrInstanceTagService::readInstanceTags()
 	if (!UserStateService)
 		return;
 
-	QString fileName = instanceTagsFileName();
+	QString fileName = PathService->instanceTagsStoreFilePath();
 	otrl_instag_read(UserStateService.data()->userState(), fileName.toUtf8().data());
 }
 
@@ -64,7 +70,7 @@ void OtrInstanceTagService::writeInstanceTags()
 	if (!UserStateService)
 		return;
 
-	QString fileName = instanceTagsFileName();
+	QString fileName = PathService->instanceTagsStoreFilePath();
 	otrl_instag_write(UserStateService.data()->userState(), fileName.toUtf8().data());
 }
 
@@ -73,13 +79,8 @@ void OtrInstanceTagService::createInstanceTag(const Account &account)
 	if (!UserStateService)
 		return;
 
-	QString fileName = instanceTagsFileName();
+	QString fileName = PathService->instanceTagsStoreFilePath();
 	otrl_instag_generate(UserStateService.data()->userState(), fileName.toUtf8().data(),
 						 account.id().toUtf8().data(), account.protocolName().toUtf8().data());
 	writeInstanceTags();
-}
-
-QString OtrInstanceTagService::instanceTagsFileName() const
-{
-	return Application::instance()->pathsProvider()->profilePath() + QString("/keys/otr_instance_tags");
 }
